--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@ https://templatemo.com/tm-534-parallo
                     </li>
                     <li class="nav-item">
                       <div class="tm-nav-link-highlight"></div>
+                      <a class="nav-link" href="https://poocoin.app/tokens/0xfcb1cffb7fb3b2244844548b7b01e11ca4b67a1f" target="_blank">CHART</a>
+                    </li>
+                    <li class="nav-item">
+                      <div class="tm-nav-link-highlight"></div>
                       <a class="nav-link" href="https://docs.tokentoken.finance/" target="_blank">DOCS</a>
                     </li>
                     <li class="nav-item">
